[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Character/PlayerAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Character/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Character/AttackArea.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Character/Camera.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.58947

[sub_resource type="Animation" id=2]
resource_name = "DamageTaken"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.968528, 0.938671, 0.938671, 1 ), Color( 0.576471, 0.180392, 0.180392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 154.861, 145.309 )
collision_mask = 28
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.968528, 0.938671, 0.938671, 1 )
animation = "Death"
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.841846, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 0
smoothing_enabled = true
script = ExtResource( 4 )

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 30
script = ExtResource( 3 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/DamageTaken = SubResource( 2 )
[connection signal="animation" from="." to="AnimatedSprite" method="_on_Player_Animate"]
[connection signal="death" from="." to="AnimatedSprite" method="_on_Player_death"]
[connection signal="took_damage" from="." to="AnimatedSprite" method="_on_Player_took_damage"]
[connection signal="attack" from="AnimatedSprite" to="AttackArea" method="_on_AnimatedSprite_attack"]
[connection signal="attackFinished" from="AnimatedSprite" to="AttackArea" method="_on_AnimatedSprite_attackFinished"]
[connection signal="kill_process" from="AnimatedSprite" to="." method="_on_AnimatedSprite_kill_process"]
[connection signal="revive_process" from="AnimatedSprite" to="." method="_on_AnimatedSprite_revive_process"]
[connection signal="rightAttack" from="AnimatedSprite" to="AttackArea" method="_on_AnimatedSprite_rightAttack"]
[connection signal="sendAttackDamage" from="AnimatedSprite" to="." method="_on_SendAttackDamage"]
[connection signal="sendGameover" from="AnimatedSprite" to="." method="_on_AnimatedSprite_sendGameover"]
